plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.12'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.anabada'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {//라이브러리를 가져오는곳
	mavenCentral()
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'//jpa
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'//jdbc
	implementation 'org.springframework.boot:spring-boot-starter-security'//서버보안
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'//타임리프
	implementation 'org.springframework.boot:spring-boot-starter-web'//웹
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'//마이바티스
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'//타임리프
	compileOnly 'org.projectlombok:lombok'//롬복
	developmentOnly 'org.springframework.boot:spring-boot-devtools'//개발편의
	runtimeOnly 'com.mysql:mysql-connector-j'//mysql
	annotationProcessor 'org.projectlombok:lombok'//롬복
	testImplementation 'org.springframework.boot:spring-boot-starter-test'//테스트라이브러리
	testImplementation 'org.springframework.security:spring-security-test'//보안테스트라이브러리

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'//소셜로그인

	implementation 'org.springframework.boot:spring-boot-starter-mail' //이메일인증
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'//채팅 json으로 보내기 위한

	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:webjars-locator-core'
	implementation 'org.webjars:sockjs-client:1.0.2'
	implementation 'org.webjars:stomp-websocket:2.3.3'
	implementation 'org.webjars:bootstrap:3.3.7'
	implementation 'org.webjars:jquery:3.1.1-1'
}

tasks.named('test') {
	useJUnitPlatform()
}
